[gd_scene load_steps=6 format=3 uid="uid://bjyqwe3hqlqwx"]

[ext_resource type="Script" uid="uid://da5n5juxpg61i" path="res://scenes/gui/gui_tab_package.gd" id="1_0pq56"]
[ext_resource type="CodeHighlighter" uid="uid://baolxejcyhdtf" path="res://resources/syntax_pkignore.tres" id="2_2grlp"]
[ext_resource type="Texture2D" uid="uid://bsnqlh447ecu4" path="res://assets/icons/up_arrow_16.png" id="2_5wxr6"]
[ext_resource type="Texture2D" uid="uid://c2l01wm768rqt" path="res://assets/icons/down_arrow_16.png" id="3_f6ykc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77p0q"]

[node name="tab_package" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0
script = ExtResource("1_0pq56")

[node name="Info" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 325
metadata/_tab_index = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="Info"]
layout_mode = 2

[node name="Label" type="Label" parent="Info/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "darkmod.txt"

[node name="HSeparator" type="HSeparator" parent="Info/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="title_row" type="HBoxContainer" parent="Info/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Info/VBoxContainer2/title_row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Title"

[node name="le_title" type="LineEdit" parent="Info/VBoxContainer2/title_row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.37, 0.37, 0.37, 1)
placeholder_text = "mission title..."
keep_editing_on_text_submit = true
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="HSeparator3" type="HSeparator" parent="Info/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="author_row" type="HBoxContainer" parent="Info/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Info/VBoxContainer2/author_row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Author"

[node name="le_author" type="LineEdit" parent="Info/VBoxContainer2/author_row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.37, 0.37, 0.37, 1)
placeholder_text = "author name..."
keep_editing_on_text_submit = true
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="HFlowContainer" type="HFlowContainer" parent="Info/VBoxContainer2"]
layout_mode = 2

[node name="version_row" type="HBoxContainer" parent="Info/VBoxContainer2/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Info/VBoxContainer2/HFlowContainer/version_row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Version"

[node name="le_version" type="LineEdit" parent="Info/VBoxContainer2/HFlowContainer/version_row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.37, 0.37, 0.37, 1)
placeholder_text = "mission version..."
keep_editing_on_text_submit = true
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="tdm_version_row" type="HBoxContainer" parent="Info/VBoxContainer2/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Info/VBoxContainer2/HFlowContainer/tdm_version_row"]
layout_mode = 2
text = "TDM Version"

[node name="le_tdm_version" type="LineEdit" parent="Info/VBoxContainer2/HFlowContainer/tdm_version_row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_placeholder_color = Color(0.37, 0.37, 0.37, 1)
placeholder_text = "required tdm version..."
keep_editing_on_text_submit = true
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="HSeparator2" type="HSeparator" parent="Info/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="Info/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 30

[node name="description" type="VBoxContainer" parent="Info/VBoxContainer2/VSplitContainer"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Info/VBoxContainer2/VSplitContainer/description"]
layout_mode = 2
text = "Description"

[node name="ce_description" type="CodeEdit" parent="Info/VBoxContainer2/VSplitContainer/description"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0.368627, 0.368627, 0.368627, 1)
placeholder_text = "mission description..."
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
wrap_mode = 1
caret_blink = true
highlight_all_occurrences = true
auto_brace_completion_enabled = true

[node name="maps" type="VBoxContainer" parent="Info/VBoxContainer2/VSplitContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="Info/VBoxContainer2/VSplitContainer/maps"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Map Sequence"

[node name="HBoxContainer" type="HBoxContainer" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer"]
layout_mode = 2

[node name="btn_add_map" type="Button" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add a map to the map sequence. "
text = "Add"

[node name="btn_remove_map" type="Button" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove a map from the map sequence. "
disabled = true
text = "Remove"

[node name="HBoxContainer2" type="HBoxContainer" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer"]
layout_mode = 2

[node name="btn_move_up" type="Button" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_5wxr6")
flat = true

[node name="btn_move_down" type="Button" parent="Info/VBoxContainer2/VSplitContainer/maps/HFlowContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_f6ykc")
flat = true

[node name="map_list" type="ItemList" parent="Info/VBoxContainer2/VSplitContainer/maps"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="tr_map_list" type="Tree" parent="Info/VBoxContainer2/VSplitContainer/maps"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true
hide_root = true
auto_tooltip = false

[node name="VBoxContainer" type="VBoxContainer" parent="Info"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_readme" type="Label" parent="Info/VBoxContainer"]
layout_mode = 2
text = "readme.txt"

[node name="ce_readme" type="CodeEdit" parent="Info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0.368627, 0.368627, 0.368627, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_77p0q")
placeholder_text = "readme file content..."
drag_and_drop_selection_enabled = false
wrap_mode = 1
caret_blink = true
highlight_all_occurrences = true
line_length_guidelines = Array[int]([93])
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true

[node name="Pack" type="HSplitContainer" parent="."]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pack"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="label_pkignore" type="Label" parent="Pack/VBoxContainer"]
layout_mode = 2
text = ".pkignore"

[node name="ce_pkignore" type="CodeEdit" parent="Pack/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.470588, 0.741176, 0.909804, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_77p0q")
text = "/foo

.jpg"
drag_and_drop_selection_enabled = false
wrap_mode = 1
caret_blink = true
syntax_highlighter = ExtResource("2_2grlp")
highlight_all_occurrences = true
auto_brace_completion_enabled = true

[node name="HSplitContainer" type="HSplitContainer" parent="Pack"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pack/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb_included" type="Label" parent="Pack/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Files"

[node name="tr_included" type="Tree" parent="Pack/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Pack/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lb_excluded" type="Label" parent="Pack/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Excluded Files"

[node name="tr_excluded" type="Tree" parent="Pack/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
